--- a/Notifications/appsettings.Development.json
+++ b/Notifications/appsettings.Development.json
@@ -5,5 +5,8 @@
       "System": "Information",
       "Microsoft": "Information"
     }
+  },
+  "ConnectionStrings": {
+    "NotificationContext": "User ID=postgres;Password=password;Server=localhost;Port=5432;Database=postgres;Integrated Security=true;Pooling=true;"
   }
 }
