Setup Publish Notifications over Http

--- a/Notifications/appsettings.json
+++ b/Notifications/appsettings.json
@@ -6,8 +6,11 @@
       "Microsoft.Hosting.Lifetime": "Information"
     }
   },
+  "Services": {
+    "ApiGateway": "http://localhost:5000/"
+  },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-	  "NotificationContext":  ""
+    "NotificationContext": "User ID=postgres;Password=password;Server=postgres;Port=5432;Database=NotificationDb;Integrated Security=true;Pooling=true;"
   }
 }
