--- a/Notifications/appsettings.Development.json
+++ b/Notifications/appsettings.Development.json
@@ -10,6 +10,6 @@
     "ApiGateway": "http://localhost:5000/"
   },
   "ConnectionStrings": {
-    "NotificationContext": "User ID=postgres;Password=password;Server=postgres;Port=5432;Database=NotificationDb;Integrated Security=true;Pooling=true;"
+    "NotificationContext": "User ID=postgres;Password=password;Server=localhost;Port=5432;Database=NotificationDb;Integrated Security=true;Pooling=true;"
   }
 }
