--- a/ProcessManagementCenter/appsettings.Development.json
+++ b/ProcessManagementCenter/appsettings.Development.json
@@ -6,7 +6,17 @@
       "Microsoft": "Information"
     }
   },
+  "AppConfig": {
+    "MineSites": [ "myn", "man", "spj", "air" ]
+  },
   "ConnectionStrings": {
     "DbConnectionString": "Data Source=(localdb)\\ProjectsV13;Initial Catalog=master;Integrated Security=True;Connect Timeout=30;Encrypt=False;TrustServerCertificate=False;ApplicationIntent=ReadWrite;MultiSubnetFailover=False"
+  },
+  "VAPID": {
+    "public": "BKlXwf1QL3LIVVQX3s6yQwccjFGaV-lzxSQEvQx0cw1EyvNQQW5uALC4M43vF28iu7pgp-Rripy94KZy3RWaAO8",
+    "private": "SjIEqvriPHonTmyfQISRDHbfHB6uxETfhST_LwpJmDM"
+  },
+  "Services": {
+    "Notifications": "http://notifications-service:5000/"
   }
 }
