--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -22,6 +22,10 @@ services:
       - "./ProcessManagementCenter/Domain:/src/ProcessManagementCenter/Domain"
       - "./ProcessManagementCenter/Migrations:/src/ProcessManagementCenter/Migrations"
       - "./ProcessManagementCenter/Services:/src/ProcessManagementCenter/Services"
+      - "./ProcessManagementCenter/appsettings.json:/src/ProcessManagementCenter/appsettings.json"
+      - "./ProcessManagementCenter/appsettings.Development.json:/src/ProcessManagementCenter/appsettings.Development.json"
+      - "./ProcessManagementCenter/Program.cs:/src/ProcessManagementCenter/Program.cs"
+      - "./ProcessManagementCenter/Startup.cs:/src/ProcessManagementCenter/Startup.cs"
     networks:
       - app-network
     environment:
@@ -40,6 +44,10 @@ services:
       - "./Notifications/Domain:/src/Notifications/Domain"
       - "./Notifications/Migrations:/src/Notifications/Migrations"
       - "./Notifications/Services:/src/Notifications/Services"
+      - "./Notifications/appsettings.json:/src/Notifications/appsettings.json"
+      - "./Notifications/appsettings.Development.json:/src/Notifications/appsettings.Development.json"
+      - "./Notifications/Program.cs:/src/Notifications/Program.cs"
+      - "./Notifications/Startup.cs:/src/Notifications/Startup.cs"
     networks:
       - app-network
     environment:
