persisting subscription with unique device id

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -22,6 +22,7 @@ services:
       - "./ProcessManagementCenter/Domain:/src/ProcessManagementCenter/Domain"
       - "./ProcessManagementCenter/Migrations:/src/ProcessManagementCenter/Migrations"
       - "./ProcessManagementCenter/Services:/src/ProcessManagementCenter/Services"
+      - "./ProcessManagementCenter/Utils:/src/ProcessManagementCenter/Utils"
       - "./ProcessManagementCenter/appsettings.json:/src/ProcessManagementCenter/appsettings.json"
       - "./ProcessManagementCenter/appsettings.Development.json:/src/ProcessManagementCenter/appsettings.Development.json"
       - "./ProcessManagementCenter/Program.cs:/src/ProcessManagementCenter/Program.cs"
@@ -44,6 +45,7 @@ services:
       - "./Notifications/Domain:/src/Notifications/Domain"
       - "./Notifications/Migrations:/src/Notifications/Migrations"
       - "./Notifications/Services:/src/Notifications/Services"
+      - "./Notifications/Utils:/src/Notifications/Utils"
       - "./Notifications/appsettings.json:/src/Notifications/appsettings.json"
       - "./Notifications/appsettings.Development.json:/src/Notifications/appsettings.Development.json"
       - "./Notifications/Program.cs:/src/Notifications/Program.cs"
