refactored web notification service in notificationService

--- a/Notifications/appsettings.json
+++ b/Notifications/appsettings.json
@@ -12,5 +12,13 @@
   "AllowedHosts": "*",
   "ConnectionStrings": {
     "NotificationContext": "User ID=postgres;Password=password;Server=postgres;Port=5432;Database=NotificationDb;Integrated Security=true;Pooling=true;"
+  },
+  "VAPID": {
+    "public": "BKlXwf1QL3LIVVQX3s6yQwccjFGaV-lzxSQEvQx0cw1EyvNQQW5uALC4M43vF28iu7pgp-Rripy94KZy3RWaAO8",
+    "private": "SjIEqvriPHonTmyfQISRDHbfHB6uxETfhST_LwpJmDM"
+  },
+  "ANH": {
+    "HubName": "pmc-sb-notif",
+    "HubConnectionString": "Endpoint=sb://pmc-sb-notif-ns.servicebus.windows.net/;SharedAccessKeyName=DefaultFullSharedAccessSignature;SharedAccessKey=MQMSCCC5jOnC8sBiiqR9H6UzsfFJAVpF4uTMRTUdJOU="
   }
 }
